# yniverliga

./: .gitignore  README.md  data_update.sh  initial_prompt.md  package-lock.json  readme.md
backend/: readme.md
backend/docker/: auth_service.Dockerfile  db.Dockerfile  django_admin.Dockerfile  docker-compose.yaml  nginx.Dockerfile  rate_service.Dockerfile  survey_service.Dockerfile
backend/nginx/: nginx.conf
backend/services/rate_service/: README.md  pyproject.toml
backend/services/rate_service/alembic/: env.py
backend/services/rate_service/alembic/versions/: 20260301_0001_initial_rate_schema.py  20260301_0002_feedback_schema_alignment.py  20260301_0003_rewiew_rate_field.py  20260301_0004_seed_synthetic_data.py  20260301_0005_rewiew_drop_extra_fields.py  20260301_0006_add_context_to_rewiews.py
backend/services/rate_service/app/: main.py
backend/services/rate_service/app/api/: __init__.py
backend/services/rate_service/app/api/dependencies/: services.py
backend/services/rate_service/app/api/v1/endpoints/: reviews.py  topics.py
backend/services/rate_service/app/core/: config.py
backend/services/rate_service/app/db/: seed.py  session.py
backend/services/rate_service/app/domain/models/: rewiew_models.py  seed_data.py  topic_models.py  users_models.py
backend/services/rate_service/app/domain/schemas/: __init__.py  rewiew_schemas.py  topic_schemas.py
backend/services/rate_service/app/repositories/: rewiew_repository.py  topics_repository.py
backend/services/rate_service/app/services/: rewiew_service.py  topic_service.py
private/: main  main.pub
(+105 files in other folders)
