[tool.poetry]
name = "rate-service"
version = "0.1.0"
description = ""
authors = ["Vladimir Tsyganov <tsyganov.vv0228@gmail.com>"]
readme = "README.md"

packages = [
    {include = "app"}
]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
sqlalchemy = ">=2.0.0"
asyncpg = ">=0.29.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = ">=2.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = "1.7.4"
python-multipart = "^0.0.22"
alembic = ">=1.12.0"
python-dotenv = ">=1.0.0"
greenlet = "^3.3.0"
bcrypt = "4.0.1"
aiosmtplib = "^5.1.0"
aiohttp = "^3.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.build_meta"